# moviepy-mcp-ui

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run.py  test_security.py  test_tool_call.py  test_tool_call_dir.py  verify_import.py  verify_import_v2.py
.Jules/: palette.md
.jules/: sentinel.md
src/: api.py  config.py  server.py
src/custom_fx/: auto_framing.py  chroma_key.py  clone_grid.py  kaleidoscope.py  matrix.py  quad_mirror.py  rgb_sync.py  rotating_cube.py
tests/: test_api_json_error.py  test_api_logging.py  test_api_security.py  test_auto_framing.py  test_clip_limit.py  test_clip_management.py  test_clone_grid.py  test_image_clip.py  test_kaleidoscope.py  test_math_validation.py  test_path_validation_unit.py  test_quad_mirror.py  test_rotating_cube.py  test_security_fix.py  test_server.py  test_server_position.py  test_video_io.py
web/: README.md  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Chat.tsx  Dashboard.tsx  EditorLayout.tsx
web/src/components/panels/: ChatPanel.tsx  LibraryPanel.tsx  PlayerPanel.tsx  TimelinePanel.tsx
web/src/components/ui/: resizable.tsx
web/src/lib/: types.ts
