[project]
name = "mcp-ui-moviepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.3",
    "fastmcp>=2.14.5",
    "litellm>=1.81.8",
    "mcp-ui>=0.1.2",
    "moviepy>=2.2.1",
    "numexpr>=2.14.1",
    "opencv-contrib-python>=4.13.0.92",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
